force-app/main/default/objects/Contact/fields/CodePen_URL__c.field-meta.xml
<CustomField>
    <fullName>CodePen_URL__c</fullName>
    <label>CodePen URL</label>
    <type>Url</type>
</CustomField>