force-app/main/default/objects/Contact/fields/CodePen_Username__c.field-meta.xml
<CustomField>
    <fullName>CodePen_Username__c</fullName>
    <label>CodePen Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>