force-app/main/default/objects/Contact/fields/Facebook_Username__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Username__c</fullName>
    <label>Facebook Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>