force-app/main/default/objects/Contact/fields/Feats_of_Strength__c.field-meta.xml
<CustomField>
    <fullName>Feats_of_Strength__c</fullName>
    <description>Comma-separated list of your super powers!</description>
    <inlineHelpText>Comma-separated list of your super powers!</inlineHelpText>
    <label>Feats of Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>