force-app/main/default/objects/Contact/fields/GitHub_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_URL__c</fullName>
    <label>GitHub URL</label>
    <type>Url</type>
</CustomField>