force-app/main/default/objects/Contact/fields/Instagram_Username__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Username__c</fullName>
    <label>Instagram Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>