force-app/main/default/objects/Contact/fields/Main_Website__c.field-meta.xml
<CustomField>
    <fullName>Main_Website__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Website</label>
    <referenceTo>Website__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>