force-app/main/default/objects/Contact/fields/Webring__c.field-meta.xml
<CustomField>
    <fullName>Webring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webring</label>
    <referenceTo>Webring__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>