force-app/main/default/objects/Contact/validationRules/Comma_Separated_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Comma_Separated_List</fullName>
    <active>true</active>
    <description>Feat of Strength field must be a comma-separates list of alphanumeric values.</description>
    <errorConditionFormula>AND(
  NOT(REGEX(Feats_of_Strength__c, &quot;^[a-zA-Z0-9,\\s]*$&quot;)),
  NOT(ISBLANK(Feats_of_Strength__c))
)</errorConditionFormula>
    <errorDisplayField>Feats_of_Strength__c</errorDisplayField>
    <errorMessage>Must be a comma-separates list of alphanumeric values.</errorMessage>
</ValidationRule>